<resources>
    <string name="app_name">School Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="or_signup">Or Signup</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="username_email">Username/Email</string>
    <string name="college_email">College Email</string>
    <string name="create_account">Create Account</string>
    <string name="retype_password">Retype Password</string>
    <string name="new_password">New Password</string>
    <string name="roll_no_svv">Roll no./SVV</string>
    <string name="marksheet">MarkSheet</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="data_structure">Data Structure</string>
    <string name="computer_graphics">Computer Graphics</string>
    <string name="a_m">A.M.:</string>
    <string name="svv_id">SVV ID:</string>
    <string name="textview">TextView</string>
    <string name="maths">Maths</string>
    <string name="select_subject_to_view_attendance">Select Subject to View Attendance</string>
    <string name="student_profile">Student Profile</string>
    <string name="student_attendance">Student Attendance</string>
    <string name="logout">Logout</string>
    <string name="profile_id_card">Profile/ID Card</string>
    <string name="attendance">Attendance</string>
    <string name="timetable">TimeTable</string>
    <string name="MarkSheet">Marksheet</string>
    <string name="student_markSheet">Student MarkSheet</string>
    <string name="student_timetable">Student TimeTable</string>
</resources>