<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/profile_icon"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile_icon"
        android:contentDescription="@string/student_profile" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/profileButton"
        android:text="@string/profile_id_card"
        app:layout_constraintEnd_toEndOf="@+id/profileButton"
        app:layout_constraintStart_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toBottomOf="@+id/profileButton"/>

    <TextView
        android:id="@+id/attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/attendanceButton"
        android:text="@string/attendance"
        app:layout_constraintEnd_toEndOf="@+id/attendanceButton"
        app:layout_constraintStart_toStartOf="@+id/attendanceButton"
        app:layout_constraintTop_toBottomOf="@+id/attendanceButton" />

    <TextView
        android:id="@+id/timetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/timeTableButton"
        android:text="@string/timetable"
        app:layout_constraintEnd_toEndOf="@+id/timeTableButton"
        app:layout_constraintStart_toStartOf="@+id/timeTableButton"
        app:layout_constraintTop_toBottomOf="@+id/timeTableButton" />

    <TextView
        android:id="@+id/markSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/markSheetButton"
        android:text="@string/MarkSheet"
        app:layout_constraintEnd_toEndOf="@+id/markSheetButton"
        app:layout_constraintStart_toStartOf="@+id/markSheetButton"
        app:layout_constraintTop_toBottomOf="@+id/markSheetButton" />

    <ImageButton
        android:id="@+id/attendanceButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/attendance_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/student_attendance" />

    <ImageButton
        android:id="@+id/timeTableButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        android:src="@drawable/timetable_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        android:contentDescription="@string/student_timetable" />

    <ImageButton
        android:id="@+id/markSheetButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendance"
        android:contentDescription="@string/student_markSheet" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>